--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
 
@@ -10,4 +13,9 @@ body{
   color: #333;
   background: #fff;
   overflow-x: hidden;
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
